--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
                 "KeycloakAdm\\KeycloakAdminServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.4.0"
     }
 }
