--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require": {
         "guzzlehttp/guzzle": "^7.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "9.4.0"
+    },
     "license": "MIT",
     "authors": [
         {
@@ -24,19 +27,24 @@
         "keycloak"
     ],
     "minimum-stability": "dev",
-    "autoload" : {
-        "psr-4" : {
+    "autoload": {
+        "psr-4": {
             "KeycloakAdm\\": "src/"
         }
     },
-    "extra" : {
-        "laravel" : {
-            "providers" : [
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
                 "KeycloakAdm\\KeycloakAdminServiceProvider"
             ]
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "9.4.0"
     }
 }
