--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.4.0"
+        "phpunit/phpunit": "^9.5@dev"
     },
     "license": "MIT",
     "authors": [
@@ -34,7 +34,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "KeycloakAdm\\Tests\\": "tests/"
         }
     },
     "scripts": {
