--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5@dev"
+        "phpunit/phpunit": "^9.5@dev",
+        "orchestra/testbench": "^7.0@dev"
     },
     "license": "MIT",
     "authors": [
@@ -38,7 +39,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit --colors='always'"
     },
     "extra": {
         "laravel": {
