--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,11 +17,12 @@
         </include>
     </coverage>
     <testsuites>
-        <testsuite name="Test Suite">
-            <directory suffix="Test.php">tests</directory>
+        <testsuite name="Unit">
+            <directory suffix="Test.php">./tests/Unit</directory>
         </testsuite>
     </testsuites>
     <php>
         <env name="DB_CONNECTION" value="testing"/>
+        <server name="APP_ENV" value="testing"/>
     </php>
 </phpunit>
